--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ Issues = "https://github.com/JangHyuckYun/mcp-youtube-intelligence/issues"
 [project.optional-dependencies]
 postgres = ["asyncpg>=0.29"]
 llm = ["openai>=1.0"]
+anthropic-llm = ["anthropic>=0.30"]
+google-llm = ["google-generativeai>=0.5"]
+all-llm = ["openai>=1.0", "anthropic>=0.30", "google-generativeai>=0.5"]
 dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
 
 [project.scripts]
