--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,13 @@ readme = "README.md"
 license = "Apache-2.0"
 requires-python = ">=3.10"
 authors = [
-    {name = "JangHyuckYun", email = "janghyeok@users.noreply.github.com"},
+    {name = "JangHyuckYun", email = "skg09203@naver.com"},
 ]
 keywords = ["mcp", "youtube", "transcript", "llm", "ai", "summarization", "entity-extraction"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
